--- a/static/styles.css
+++ b/static/styles.css
@@ -1,7 +1,2 @@
-table, td, th {
-	border: 1px solid black;
-}
-
-table {
-    border-collapse: collapse;
-}
+.Dashboard__test___2N_DC{background-color:blue}
+/*# sourceMappingURL=bundle.js.map*/
