Created basic Kanban board

--- a/src/dashboard/Dashboard.css
+++ b/src/dashboard/Dashboard.css
@@ -1,3 +1,15 @@
-.test {
-	background-color: blue;
+.kanban {
+	background-color: #C5C7C9;
+	display: flex;
+}
+
+.listContainer {
+	background-color: #E2E4E6;
+	width: 275px;
+	padding: 8px;
+	margin: 8px;
+}
+
+.listItem {
+	background-color: white;
 }
