--- a/src/dashboard/Dashboard.css
+++ b/src/dashboard/Dashboard.css
@@ -1,15 +1,7 @@
-.kanban {
-	background-color: #C5C7C9;
+.flex {
 	display: flex;
 }
 
-.listContainer {
-	background-color: #E2E4E6;
-	width: 275px;
-	padding: 8px;
+.addMargin {
 	margin: 8px;
-}
-
-.listItem {
-	background-color: white;
 }
